<resources>
    <string name="app_name">Inventory Manager</string>
    <string name="empty_view_title_text">No items in inventory</string>
    <string name="empty_view_subtitle_text">To add an item, click on the button below</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Product price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="category_overview">Overview</string>
    <string name="add_inventory_item_activity_title">Add Item</string>
    <string name="editor_inventory_item_activity_title">Edit Item</string>
    <string name="sale_button">Sale</string>
    <string name="order_stock_button">Order Stock</string>
    <string name="product_picture">Take Photo</string>
    <string name="photo">Photo</string>
    <string name="from_file">File</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="saving_inventory_failed">Saving to DB failed</string>
    <string name="saving_inventory_succeeded">Saving to DB succeeded</string>
    <string name="check_fields_prompt">Check all fields in the form were entered correctly</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_update_inventory_failed">Update failed</string>
    <string name="editor_update_inventory_successful">Update succeeded</string>
    <string name="delete_dialog_msg">Are you sure you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_inventory_failed">Delete failed</string>
    <string name="editor_delete_inventory_successful">Delete succeeded</string>
    <string name="inventory_item">Item: </string>
    <string name="inventory_item_quantity">Quantity: </string>
    <string name="inventory_item_price">Price: </string>
    <string name="inventory_item_actions">Actions</string>
    <string name="inventory_item_sale">Sale</string>
    <string name="inventory_item_receive_shipment">Shipment</string>
    <string name="inventory_item_make_order">Order</string>
    <string name="inventory_supplier_email_title">Supplier</string>


</resources>
